--- a/wiki/fr/TechDraw_Balloon.html
+++ b/wiki/fr/TechDraw_Balloon.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Balloon/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Balloon&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Hinweisfeld (73% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Hinweisfeld (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Balloon.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Balloon (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Pallinatura (73% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw adnotacj&#281; w formie dymka (73% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw adnotacj&#281; w formie dymka (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1087;&#1088;&#1080;&#1084;&#1077;&#1095;&#1072;&#1085;&#1080;&#1077; &#1074; &#1074;&#1099;&#1085;&#1086;&#1089;&#1082;&#1091;" (27% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Balloon.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#54413;&#49440; (64% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/fr">Cote verticale chanfrein</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/fr">Annotation texte enrichi</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_AxoLengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_AxoLengthDimension.html" title="TechDraw AxoLengthDimension/fr">Cote axonom&eacute;trique</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -174,35 +172,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145747
+Cached time: 20260117135736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.123 seconds
-Real time usage: 0.422 seconds
-Preprocessor visited node count: 986/1000000
-Post&#8208;expand include size: 28825/2097152 bytes
-Template argument size: 10531/2097152 bytes
+CPU time usage: 0.118 seconds
+Real time usage: 0.166 seconds
+Preprocessor visited node count: 985/1000000
+Post&#8208;expand include size: 28723/2097152 bytes
+Template argument size: 10463/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2315/5000000 bytes
+Unstrip post&#8208;expand size: 2325/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  127.967      1 -total
- 32.67%   41.804      1 Template:TechDraw_Tools_navi/fr
- 17.48%   22.365      5 Template:PropertyView
- 17.11%   21.895     12 Template:PropertyData
- 15.06%   19.269     17 Template:Variable
- 14.71%   18.823      2 Template:Navigation_menu_2
-  9.54%   12.206      1 Template:Code
-  9.40%   12.026      1 Template:Userdocnavi/fr
-  3.43%    4.393      2 Template:Docnav/fr
-  3.33%    4.264      1 Template:GuiCommand/fr
+100.00%   43.911      1 -total
+ 20.09%    8.823     12 Template:PropertyData
+ 17.10%    7.508      1 Template:TechDraw_Tools_navi/fr
+ 15.55%    6.828     17 Template:Variable
+ 11.45%    5.030      2 Template:Navigation_menu_2
+ 10.12%    4.443      5 Template:PropertyView
+ 10.10%    4.434      1 Template:MenuCommand
+  8.55%    3.755      1 Template:Userdocnavi/fr
+  8.47%    3.719      1 Template:Code
+  7.38%    3.243      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260111145747 and revision id 1734408. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135736 and revision id 1739490. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
