--- a/wiki/fr/TechDraw_Balloon.html
+++ b/wiki/fr/TechDraw_Balloon.html
@@ -58,9 +58,8 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez l'un des &eacute;l&eacute;ments suivants&nbsp;:
-<ul><li>Une vue (sur la feuille ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>).</li>
+<ul><li>Une vue (sur la feuille ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>).</li>
 <li>Un sommet dans une vue.</li>
 <li>Une ar&ecirc;te dans une vue.</li>
 <li>Une r&eacute;gion ferm&eacute;e dans une vue.</li></ul></li>
@@ -70,7 +69,6 @@
 <li>Si une vue ou une r&eacute;gion a &eacute;t&eacute; s&eacute;lectionn&eacute;e&nbsp;:
 <ol><li>Le curseur se transforme en une ic&ocirc;ne bulle.</li>
 <li>Cliquez sur un point de la feuille pour l'origine de la bulle.</li></ol></li></ol>
-</div>
 <p>Pour d&eacute;placer la bulle, appuyez et maintenez le bouton gauche de la souris sur son centre et faites glisser la souris.
 </p>
 <div class="mw-translate-fuzzy">
@@ -168,13 +166,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135828
+Cached time: 20260117135857
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 983/1000000
+CPU time usage: 0.131 seconds
+Real time usage: 0.197 seconds
+Preprocessor visited node count: 982/1000000
 Post&#8208;expand include size: 28621/2097152 bytes
 Template argument size: 10395/2097152 bytes
 Highest expansion depth: 7/100
@@ -184,19 +182,19 @@ Unstrip post&#8208;expand size: 2325/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.114      1 -total
- 25.87%   10.636     12 Template:PropertyData
- 20.33%    8.359      1 Template:TechDraw_Tools_navi/fr
- 19.78%    8.134     17 Template:Variable
- 16.64%    6.842      2 Template:Navigation_menu_2
- 12.62%    5.190      5 Template:PropertyView
-  9.29%    3.821      1 Template:Userdocnavi/fr
-  7.20%    2.959      2 Template:Docnav/fr
-  6.84%    2.812      1 Template:Code
-  6.43%    2.642      1 Template:GuiCommand/fr
+100.00%   53.379      1 -total
+ 22.66%   12.094      1 Template:TechDraw_Tools_navi/fr
+ 20.44%   10.910     12 Template:PropertyData
+ 15.88%    8.477      2 Template:Navigation_menu_2
+ 15.59%    8.322     17 Template:Variable
+ 11.31%    6.039      1 Template:Userdocnavi/fr
+  9.54%    5.092      5 Template:PropertyView
+  9.21%    4.917      1 Template:Code
+  9.17%    4.895      1 Template:GuiCommand/fr
+  6.17%    3.292      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135828 and revision id 1739494. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135857 and revision id 1739496. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
