--- a/wiki/fr/TechDraw_Balloon.html
+++ b/wiki/fr/TechDraw_Balloon.html
@@ -70,12 +70,8 @@
 <ol><li>Le curseur se transforme en une ic&ocirc;ne bulle.</li>
 <li>Cliquez sur un point de la feuille pour l'origine de la bulle.</li></ol></li></ol>
 <p>Pour d&eacute;placer la bulle, appuyez et maintenez le bouton gauche de la souris sur son centre et faites glisser la souris.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Pour modifier les propri&eacute;t&eacute;s de la bulle, double-cliquez dessus dans la feuille ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Cela ouvrira le panneau des t&acirc;ches de la bulle.
-</p>
-</div>
-<p><b>Remarque&nbsp;:</b> la position de la bulle est relative &agrave; sa vue source et utilise le m&ecirc;me facteur d'&eacute;chelle.
+</p><p>Pour modifier les propri&eacute;t&eacute;s de la bulle, double-cliquez dessus dans la feuille ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Cela ouvrira le panneau des t&acirc;ches de la bulle.
+</p><p><b>Remarque&nbsp;:</b> la position de la bulle est relative &agrave; sa vue source et utilise le m&ecirc;me facteur d'&eacute;chelle.
 </p><p><span id="Using_separators"></span>
 </p>
 <h2><span id="Utiliser_des_s.C3.A9parateurs"></span><span class="mw-headline" id="Utiliser_des_s&eacute;parateurs">Utiliser des s&eacute;parateurs</span></h2>
@@ -166,13 +162,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135857
+Cached time: 20260117135906
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.197 seconds
-Preprocessor visited node count: 982/1000000
+CPU time usage: 0.102 seconds
+Real time usage: 0.125 seconds
+Preprocessor visited node count: 981/1000000
 Post&#8208;expand include size: 28621/2097152 bytes
 Template argument size: 10395/2097152 bytes
 Highest expansion depth: 7/100
@@ -182,19 +178,19 @@ Unstrip post&#8208;expand size: 2325/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.379      1 -total
- 22.66%   12.094      1 Template:TechDraw_Tools_navi/fr
- 20.44%   10.910     12 Template:PropertyData
- 15.88%    8.477      2 Template:Navigation_menu_2
- 15.59%    8.322     17 Template:Variable
- 11.31%    6.039      1 Template:Userdocnavi/fr
-  9.54%    5.092      5 Template:PropertyView
-  9.21%    4.917      1 Template:Code
-  9.17%    4.895      1 Template:GuiCommand/fr
-  6.17%    3.292      2 Template:Docnav/fr
+100.00%   30.565      1 -total
+ 23.86%    7.292      1 Template:TechDraw_Tools_navi/fr
+ 21.64%    6.615     12 Template:PropertyData
+ 18.39%    5.621     17 Template:Variable
+ 16.76%    5.122      2 Template:Navigation_menu_2
+ 12.19%    3.725      1 Template:Userdocnavi/fr
+  8.69%    2.656      2 Template:Docnav/fr
+  8.66%    2.647      5 Template:PropertyView
+  6.92%    2.115      1 Template:GuiCommand/fr
+  6.43%    1.966      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135857 and revision id 1739496. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135905 and revision id 1739498. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
