--- a/wiki/fr/TechDraw_Balloon.html
+++ b/wiki/fr/TechDraw_Balloon.html
@@ -53,7 +53,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>Bulle<b> peut ajouter des bulles avec une ligne de rep&egrave;re dans un dessin.</b>
+<p>L'outil <b>TechDraw Bulle</b> peut ajouter des bulles avec une ligne de rep&egrave;re dans un dessin.
 </p><p><span typeof="mw:File"><a href="../index.php?title=Techdraw_balloon.png&amp;filetimestamp=20190315112627&amp;.html" class="mw-file-description"><img src="../File/Techdraw_balloon.png" decoding="async" width="600" height="394" class="mw-file-element" data-file-width="983" data-file-height="646"></a></span>
 </p><p><span id="Usage"></span>
 </p>
@@ -159,12 +159,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117135953
+Cached time: 20260117140025
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.186 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.204 seconds
 Preprocessor visited node count: 980/1000000
 Post&#8208;expand include size: 28621/2097152 bytes
 Template argument size: 10395/2097152 bytes
@@ -175,19 +175,19 @@ Unstrip post&#8208;expand size: 2329/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.550      1 -total
- 19.73%   11.159     12 Template:PropertyData
- 15.15%    8.565      1 Template:TechDraw_Tools_navi/fr
- 15.08%    8.528      2 Template:Docnav/fr
- 13.69%    7.739     17 Template:Variable
- 12.76%    7.214      1 Template:Userdocnavi/fr
- 10.96%    6.197      2 Template:Navigation_menu_2
- 10.04%    5.679      1 Template:GuiCommand/fr
-  8.69%    4.912      5 Template:PropertyView
-  6.03%    3.409      1 Template:Code
+100.00%   47.463      1 -total
+ 23.40%   11.104     12 Template:PropertyData
+ 19.31%    9.166      1 Template:TechDraw_Tools_navi/fr
+ 16.18%    7.681     17 Template:Variable
+ 14.50%    6.884      2 Template:Navigation_menu_2
+ 10.76%    5.106      1 Template:Userdocnavi/fr
+ 10.58%    5.024      5 Template:PropertyView
+  9.46%    4.490      1 Template:Code
+  9.46%    4.488      1 Template:GuiCommand/fr
+  7.79%    3.695      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117135953 and revision id 1739500. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:155115-0!canonical and timestamp 20260117140025 and revision id 1739502. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
