--- a/wiki/fr/TechDraw_ClipGroupRemove.html
+++ b/wiki/fr/TechDraw_ClipGroupRemove.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ClipGroupRemove/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ClipGroupRemove&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw AusschnittsgruppeEntfernen (80% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw AusschnittsgruppeEntfernen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ClipGroupRemove.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ClipGroupRemove (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Rimuovi la vista dal gruppo clip (80% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Usu&#324; widok z grupy wycink&oacute;w (80% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Usu&#324; widok z grupy wycink&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1059;&#1073;&#1088;&#1072;&#1090;&#1100; &#1042;&#1080;&#1076; &#1080;&#1079; &#1075;&#1088;&#1091;&#1087;&#1087;&#1099;" (40% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
@@ -11,9 +11,7 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
-<div class="warning-box">Cet outil est obsol&egrave;te, il n'est plus disponible dans <span style="font-size:small;color:green;">version 1.0 et suivantes</span>.<br>Les vues peuvent maintenant &ecirc;tre gliss&eacute;es et d&eacute;pos&eacute;es vers et depuis les <a href="../fr/TechDraw_ClipGroup.html" title="TechDraw ClipGroup/fr">Fen&ecirc;tres de rognage</a> dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</div>
-</div>
+<div class="warning-box">Cet outil est obsol&egrave;te, il n'est plus disponible dans <span style="font-size:small;color:green;">version 1.0 et suivantes</span>.<br>Les vues peuvent maintenant &ecirc;tre gliss&eacute;es et d&eacute;pos&eacute;es vers et depuis les <a href="../fr/TechDraw_ClipGroup.html" title="TechDraw ClipGroup/fr">Fen&ecirc;tres de rognage</a> dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -113,35 +111,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111152552
+Cached time: 20260117140210
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.080 seconds
-Preprocessor visited node count: 330/1000000
-Post&#8208;expand include size: 24435/2097152 bytes
-Template argument size: 9570/2097152 bytes
+CPU time usage: 0.071 seconds
+Real time usage: 0.107 seconds
+Preprocessor visited node count: 329/1000000
+Post&#8208;expand include size: 24427/2097152 bytes
+Template argument size: 9562/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1490/5000000 bytes
+Unstrip post&#8208;expand size: 1500/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.307      1 -total
- 32.82%    6.337      1 Template:TechDraw_Tools_navi/fr
- 21.39%    4.130      2 Template:Navigation_menu_2
- 17.01%    3.284      1 Template:Userdocnavi/fr
- 12.20%    2.356      1 Template:VeryImportantMessage
-  9.85%    1.902      1 Template:GuiCommand/fr
-  8.68%    1.676      2 Template:Docnav/fr
-  7.32%    1.414      1 Template:VersionPlus/fr
-  6.37%    1.229      1 Template:Caption
-  5.42%    1.046      1 Template:Button
+100.00%   22.871      1 -total
+ 36.79%    8.415      1 Template:TechDraw_Tools_navi/fr
+ 24.17%    5.529      2 Template:Navigation_menu_2
+ 18.53%    4.239      1 Template:Userdocnavi/fr
+ 10.74%    2.457      1 Template:VeryImportantMessage
+  9.36%    2.140      2 Template:Docnav/fr
+  8.76%    2.003      1 Template:GuiCommand/fr
+  5.88%    1.346      1 Template:VersionPlus/fr
+  4.86%    1.112      1 Template:Caption
+  4.55%    1.041      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180758-0!canonical and timestamp 20260111152552 and revision id 1734761. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180758-0!canonical and timestamp 20260117140210 and revision id 1739508. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
