--- a/wiki/fr/TechDraw_ClipGroupRemove.html
+++ b/wiki/fr/TechDraw_ClipGroupRemove.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ClipGroupRemove/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ClipGroupRemove&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw AusschnittsgruppeEntfernen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ClipGroupRemove.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ClipGroupRemove (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Rimuovi la vista dal gruppo clip (80% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Usu&#324; widok z grupy wycink&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ClipGroupRemove.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1059;&#1073;&#1088;&#1072;&#1090;&#1100; &#1042;&#1080;&#1076; &#1080;&#1079; &#1075;&#1088;&#1091;&#1087;&#1087;&#1099;" (40% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -59,12 +59,10 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>S&eacute;lectionnez une vue faisant partie d'une fen&ecirc;tre de rognage dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> ou la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li></ul>
+<ul><li>S&eacute;lectionnez une vue faisant partie d'une fen&ecirc;tre de rognage dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li></ul>
 <ol><li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroupRemove.svg&amp;filetimestamp=20201127091530&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroupRemove.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Supprimer la vue de la fen&ecirc;tre de rognage</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de rognage &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroupRemove.svg&amp;filetimestamp=20201127091530&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroupRemove.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Supprimer la vue de la fen&ecirc;tre de rognage</b> du menu.</li></ul></li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -111,35 +109,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117140210
+Cached time: 20260117140228
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 329/1000000
+CPU time usage: 0.093 seconds
+Real time usage: 0.181 seconds
+Preprocessor visited node count: 328/1000000
 Post&#8208;expand include size: 24427/2097152 bytes
 Template argument size: 9562/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1500/5000000 bytes
+Unstrip post&#8208;expand size: 1504/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.871      1 -total
- 36.79%    8.415      1 Template:TechDraw_Tools_navi/fr
- 24.17%    5.529      2 Template:Navigation_menu_2
- 18.53%    4.239      1 Template:Userdocnavi/fr
- 10.74%    2.457      1 Template:VeryImportantMessage
-  9.36%    2.140      2 Template:Docnav/fr
-  8.76%    2.003      1 Template:GuiCommand/fr
-  5.88%    1.346      1 Template:VersionPlus/fr
-  4.86%    1.112      1 Template:Caption
-  4.55%    1.041      1 Template:Button
+100.00%   37.136      1 -total
+ 35.31%   13.111      1 Template:TechDraw_Tools_navi/fr
+ 22.98%    8.533      2 Template:Navigation_menu_2
+ 15.29%    5.679      1 Template:Userdocnavi/fr
+ 13.51%    5.018      2 Template:Docnav/fr
+ 11.20%    4.159      1 Template:GuiCommand/fr
+ 10.00%    3.713      1 Template:VeryImportantMessage
+  4.99%    1.852      1 Template:VersionPlus/fr
+  4.80%    1.781      1 Template:MenuCommand
+  4.02%    1.493      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180758-0!canonical and timestamp 20260117140210 and revision id 1739508. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180758-0!canonical and timestamp 20260117140228 and revision id 1739510. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
