--- a/wiki/fr/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/fr/TechDraw_CommandAddOffsetVertex.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CommandAddOffsetVertex/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CommandAddOffsetVertex&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw BefehlKnotenVersetzen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_CommandAddOffsetVertex.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CommandAddOffsetVertex (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../pl/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj odsuni&#281;cie wierzcho&#322;ka (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw CommandAddOffsetVertex
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1042;&#1077;&#1088;&#1096;&#1080;&#1085;&#1091; &#1089;&#1086; &#1057;&#1084;&#1077;&#1097;&#1077;&#1085;&#1080;&#1077;&#1084;) (22% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -59,16 +59,14 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez un sommet.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyer sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter un sommet d&eacute;cal&eacute;</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter un sommet d&eacute;cal&eacute;</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Lignes centrales/filetages &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter un sommet d&eacute;cal&eacute;</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
 <li>Entrez le <b>D&eacute;calage en X</b> souhait&eacute; (positif ou n&eacute;gatif) et le <b>D&eacute;calage en Y</b> en mm.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>Un sommet cosm&eacute;tique est ajout&eacute;.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -116,34 +114,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117140357
+Cached time: 20260117140447
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.100 seconds
-Preprocessor visited node count: 357/1000000
-Post&#8208;expand include size: 25907/2097152 bytes
-Template argument size: 9957/2097152 bytes
+CPU time usage: 0.069 seconds
+Real time usage: 0.115 seconds
+Preprocessor visited node count: 356/1000000
+Post&#8208;expand include size: 25900/2097152 bytes
+Template argument size: 9950/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1393/5000000 bytes
+Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.373      1 -total
- 32.26%    6.894      1 Template:TechDraw_Tools_navi/fr
- 24.15%    5.161      2 Template:Navigation_menu_2
- 17.25%    3.687      1 Template:Userdocnavi/fr
- 11.84%    2.530      3 Template:MenuCommand
- 10.38%    2.219      2 Template:Docnav/fr
-  9.27%    1.981      1 Template:Caption
-  9.20%    1.967      1 Template:GuiCommand/fr
-  6.74%    1.441      2 Template:Button
+100.00%   39.886      1 -total
+ 65.67%   26.193      1 Template:TechDraw_Tools_navi/fr
+ 24.59%    9.806      2 Template:Navigation_menu_2
+ 10.14%    4.043      1 Template:Userdocnavi/fr
+  6.16%    2.456      1 Template:GuiCommand/fr
+  5.47%    2.181      2 Template:Docnav/fr
+  3.96%    1.581      1 Template:Caption
+  3.58%    1.427      2 Template:Button
+  3.38%    1.349      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117140357 and revision id 1739512. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:330541-0!canonical and timestamp 20260117140447 and revision id 1739514. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
